overlapping sections issue

--- a/static/style.css
+++ b/static/style.css
@@ -253,7 +253,7 @@ margin-bottom: 0px;
 /* Section 4 */
 
 #section-4{
-    height: 100vh;
+    height: 150vh;
     width: 100vw;
 }
 
@@ -325,7 +325,7 @@ margin-bottom: 0px;
 /* Section 5 */
 
 #section-5{
-    height: 100vh;
+    height: 150vh;
     width: 100vw;
 }
 
